# neat

./: .gitignore  CMakeLists.txt  LICENSE
include/: activation.h  changemeplsease.h  crossover.h  feedforwardneuralnetwork.h  fitnessfn.h  functions.h  gameinformation.h  genome.h  individual.h  link.h  linkmutator.h  neatconfig.h  neurongene.h  neuroninput.h  population.h  rng.h
lib/pkgconfig/: neat.pc
src/: CMakeLists.txt  activation.cpp  crossover.cpp  feedforwardneuralnetwork.cpp  functions.cpp  genome.cpp  linkmutator.cpp  main.cpp  mutation.cpp  neuronmutator.cpp  population.cpp  population.tpp
src/neat/: CMakeLists.txt  activation.cpp  crossover.cpp  feedforwardneuralnetwork.cpp  functions.cpp  genome.cpp  linkmutator.cpp  mutation.cpp  neuronmutator.cpp  population.cpp  population.tpp
src/neat/cmake/: neat.pc.in
src/neat/neat/: activation.h  changemeplsease.h  crossover.h  feedforwardneuralnetwork.h  fitnessfn.h  functions.h  gameinformation.h  genome.h  individual.h  link.h  linkmutator.h  neuron.h  neurongene.h  neuronmutator.h  population.h  rng.h
